[gd_scene load_steps=20 format=3 uid="uid://srapgnfh0jom"]

[ext_resource type="Script" path="res://app_scenes/demo_browser/demo_block/demo_block.gd" id="1_ugoad"]
[ext_resource type="Texture2D" uid="uid://bpqbc5xh6mvog" path="res://app_scenes/demo_browser/demo_block/box_gradient_texture.png" id="2_qhech"]
[ext_resource type="AudioStream" uid="uid://cjeec0nxbf87s" path="res://app_scenes/demo_browser/demo_block/misc_menu_3.wav" id="2_rs8g8"]
[ext_resource type="ArrayMesh" uid="uid://qjhiaoishe6v" path="res://app_scenes/demo_browser/demo_block/block_mesh.obj" id="3_jn2mj"]
[ext_resource type="ArrayMesh" uid="uid://dx6lxi65yf2mn" path="res://app_scenes/demo_browser/demo_block/star_mesh.obj" id="5_bvfip"]
[ext_resource type="AudioStream" uid="uid://ccrpda0mbkcuq" path="res://app_scenes/demo_browser/demo_block/misc_menu.wav" id="7_c1e2j"]
[ext_resource type="AudioStream" uid="uid://mkm0b0bx2j2p" path="res://app_scenes/demo_browser/demo_block/load.wav" id="8_tdhqo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c3gvf"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mdpgq"]
flip_faces = true
size = Vector3(1.1, 1.1, 1.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5g61a"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0, 1, 0.105882)
albedo_texture = ExtResource("2_qhech")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3hd88"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0, 1, 0.0431373)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t18rc"]
render_priority = 1
transparency = 1
depth_draw_mode = 2
no_depth_test = true
shading_mode = 0
texture_filter = 0

[sub_resource type="QuadMesh" id="QuadMesh_h8jii"]
size = Vector2(0.8, 0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_84d2q"]
render_priority = 2
depth_draw_mode = 2
no_depth_test = true
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vefsd"]
render_priority = 3
depth_draw_mode = 2
no_depth_test = true
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jelt6"]
render_priority = 2
depth_draw_mode = 2
no_depth_test = true
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)
billboard_mode = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_luyck"]
direction = Vector3(0, 0, 1)
spread = 180.0
flatness = 1.0
initial_velocity_min = 0.25
initial_velocity_max = 0.25
gravity = Vector3(0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_khhu3"]
size = Vector2(0.05, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_mdsj2"]

[node name="DemoBlock" type="StaticBody3D"]
script = ExtResource("1_ugoad")
hovered_sfx = ExtResource("2_rs8g8")

[node name="Background" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_c3gvf")
mesh = SubResource("BoxMesh_mdpgq")

[node name="Foreground" type="MeshInstance3D" parent="."]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_5g61a")
mesh = ExtResource("3_jn2mj")

[node name="Wireframe" type="MeshInstance3D" parent="."]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_3hd88")

[node name="Thumbnail" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_t18rc")
mesh = SubResource("QuadMesh_h8jii")

[node name="StarMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0.413, -0.449, 0)
visible = false
material_override = SubResource("StandardMaterial3D_84d2q")
mesh = ExtResource("5_bvfip")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StarMesh"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vefsd")
mesh = ExtResource("5_bvfip")

[node name="GPUParticles3D" type="GPUParticles3D" parent="StarMesh"]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_jelt6")
amount = 4
process_material = SubResource("ParticleProcessMaterial_luyck")
draw_pass_1 = SubResource("QuadMesh_khhu3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mdsj2")

[node name="BeepSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c1e2j")
bus = &"SFX"

[node name="SelectedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tdhqo")
bus = &"SFX"
